fem decimal to number updated